[tool.poetry]
name = "telegram_bot"
version = "0.1.0"
description = ""
authors = ["TimurV2 <sabzerov303@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
telebot = "^0.0.4"
pyTelegramBotAPI = "^4.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
